# Email-Agent

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.genesis/: DONE.html  KICKOFF-INTERVIEW.md  KICKOFF.md  LOOPS.md  PLAN.md  context-graph.json  genesis.md  implementation-notes.html
.genesis/checkpoints/: CURRENT.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md
.genesis/decisions/: decisions-manifest.md
.genesis/wiki/: index.md  log.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: check_conventional_commit.py  check_coverage.py
src/email_agent/: __init__.py  main.py
src/email_agent/application/: __init__.py  approval_request.py  approve_email_use_case.py  delivery_service.py  draft_email_use_case.py  draft_request.py  drafting_service.py  send_email_use_case.py
src/email_agent/config/: __init__.py  settings.py
src/email_agent/domain/: __init__.py  approval.py  draft_state.py  email_draft.py  email_message.py  exceptions.py  policies.py  recipient.py
src/email_agent/infrastructure/: __init__.py  anthropic_adapter.py  draft_response.py  draft_response_validator.py  errors.py  gmail_adapter.py  gmail_errors.py  google_oauth_client.py  oauth_token_store.py  prompt_builder.py
src/email_agent/interface/: __init__.py  cli.py  container.py  errors.py  logging.py  models.py  translation.py
src/email_agent/interface/api/: __init__.py
tests/: test_config.py  test_main.py
tests/application/: __init__.py  test_approve.py  test_delivery_service.py  test_drafting.py  test_send_email_use_case.py
tests/domain/: test_domain.py
tests/infrastructure/: __init__.py  test_anthropic_adapter.py  test_draft_response.py  test_draft_response_validator.py  test_gmail_adapter.py  test_google_oauth_client.py  test_oauth_token_store.py  test_prompt_builder.py
tests/interface/: conftest.py  test_api.py  test_cli.py  test_container.py  test_logging.py
